--- a/Typescript/ndm-ts-poc/index.html
+++ b/Typescript/ndm-ts-poc/index.html
@@ -13,7 +13,6 @@
 </head>
 <body>
 	<h1 class="text-center h1">Accordion element</h1>
-
 	<ndm-accordion id="lorem-accordion">
 		<div class="accordion-item" title="What is Lorem Ipsum?">
 			<p>
@@ -31,6 +30,8 @@
 			</p>
 		</div>
 	</ndm-accordion>
+
+	<section id="spa-container"></section>
 
     <!-- Base JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
